2006-05-04  Pieter Palmers  <pieterpalmers@users.sourceforge.net>

	* configure.ac: Version bumped to 0.8.1

	* Introduced SSE-accellerated packet encoders/decoders

2006-05-04  Daniel Wagner  <wagi@monom.org>

	* configure.ac: Version bumped to 0.8.0

	* Discovering code ported stable 0.2.0 version
	to head and activated for default discovering.

2006-05-04  Daniel Wagner  <wagi@monom.org>

	* configure.ac: Version bumped to 0.7.2

	* src/bebob: Some cleanup on naming and
	namespaces.

2006-05-03  Daniel Wagner  <wagi@monom.org>

	* configure.ac: Version bumped to 0.7.1

	* Fixed bug in SignalSource command which
	prevented one to set the samplerate.

2006-04-23  Daniel Wagner  <wagi@monom.org>

	* configure.ac: Version bumped to 0.7.0

	* Abstract interface IAvDevice introduced. 
	* BeBoB device discovering code moved into bebob directory.
	* Bounce device added.

2006-04-17  Daniel Wagner  <wagi@monom.org>

	* configure.ac: Version bumped to 0.6.4

	* src/libfreebobavc/avc_generic.cpp (serialize): Decode subunit_type 
	and subunit_id field.
	(fire): avc1394_transaction_block2 inteface change update.
	* src/libfreebobavc/ieee1394service.cpp (transactionBlock): Likewise.
	* src/libfreebobavc/ieee1394service.h: Likewise.

2006-04-11  Daniel Wagner  <wagi@monom.org>

	* configure.ac: Version bumped to 0.6.3
	
	* src/avdevicesubunit.cpp (discoverFunctionBlocks): reformating.
	(discoverFunctionBlocksDo): Really added a correct
	bugfix for the reuse of ExtendedSubunitInfoCmd.

2006-04-07  Pieter Palmers <pieterpalmers@users.sourceforge.net>

	* src/avdevice.h src/avdevice.cpp: moved the include of stdint.h
	from the implementation to the header, to fix certain compilation
	problems wrt uint64_t. This datatype is also used in the class
	definition in avdevice.h.

2006-04-05  Pieter Palmers <pieterpalmers@users.sourceforge.net>

	* configure.ac: Version bump to 0.6.2

	* src/freebob.cpp: Retry setting the sample rate if it fails the
	first time.
	